src/test/deca/syntax/invalid/created/miscellaneous/bad_op1.deca
// Description :
//    deux operateurs binaires mult (pas de puissance) à la suite
//
// Resultats :
//		Syntaxe error

{
a = b**2;
}